# Creature-Basics

./: .gitignore  .gitmodules  README.md
Assets/: Bone.cs  ExampleScene.unity  SkeletonGenerator.cs  SkeletonTest.cs  SkeletonTest.unity
Assets/Debug/: BoneRotationDebugger.cs
Assets/Details/: Blue.mat  Eyes.asset  Mouth.asset  PrefabDetail.cs  Red.mat  Spec.cs  TestSpec.asset
Assets/LSystem/: LSystem.cs  LSystemEditor.cs  TestScene.unity
Assets/LSystem/Scripts/: LSystem.cs  LSystemEditor.cs
Assets/Metaball/: Ball.cs  Creature.cs  ExampleMetaball.cs  MeshGenerator.cs  Metaball.cs  MetaballExample.unity  Segment.cs
Assets/ParametricCreature/: GenerateParametric.cs
Assets/Pinocchio Unity/: Attachment.cs
Assets/SkeletonFromLSystem/: Creature0.unity  SkeletonTest.cs
Assets/SkeletonFromLSystem/Prefabs/: Creature Create.prefab  Creature0.prefab  Creature0_Skeleton.prefab  Creature1.prefab  Creature3.prefab  HumanCreature2.prefab
Assets/SkeletonFromLSystem/Prefabs/Old/: QUEEN MARIKA.prefab
Assets/SkeletonFromLSystem/Scenes/: Create Creature.unity  Creature0.unity  TestScene.unity
Assets/SkeletonFromLSystem/Scripts/: Bone.cs  Skeleton.cs  SkeletonGenerator.cs  SkeletonTest.cs
Assets/Skinning/Utility/: BoneUtil.cs
Assets/SymmetricCreature/: CreateCreature.cs  SymmetricCreature.cs
BoneHeatNativePlugin/: CMakeLists.txt  README.md
BoneHeatNativePlugin/src/: native_plugin.cpp  native_plugin.h
ProjectSettings/: DynamicsManager.asset  TimeManager.asset
